--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,29 @@
 /* variables */
 /* functions */
 /* mixins */
-@import url(url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900"));
 /* placeholders */
+.link {
+  color: #51ddfc;
+  font-weight: 700;
+}
+
+.img--logo, .img--frame, .img--avatar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
+
+.img--frame {
+  border: 1px solid #888;
+}
+
 @media (min-width: 768px) {
   .nav__item {
     display: inline-block;
+  }
+  .nav__item + .nav__item {
+    margin-left: 10px;
   }
 }
 
@@ -17,6 +35,11 @@
   padding: 15px 20px;
   color: #888;
 }
+@media (min-width: 768px) {
+  .nav__item a {
+    padding: 10px;
+  }
+}
 
 .nav__item a:hover {
   color: #fff;
@@ -25,16 +48,26 @@
 }
 
 .headline--primary {
-  font-weight: 700;
-  letter-spacing: 0px;
-  font-size: 2em;
-  line-height: 1.125;
   margin: 0 0 1.25em 0.625em;
   color: #58e1c1;
 }
 
 .headline--secondary {
   font-weight: 300;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+[class^=btn--] {
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0.9375em;
+  margin-bottom: 0.9375em;
+  border: none;
+  border-radius: 5px;
+}
+[class^=btn--]:hover {
+  cursos: pointer;
 }
 
 /* normalize */
@@ -379,291 +412,316 @@ template {
 /* base */
 * {
   box-sizing: border-box;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: 0.3px;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1.25em 2.5em;
-  font-size: 16px;
+p {
   line-height: 1.5;
-  font-family: "Nunito", sans-serif;
-  color: #888;
-  text-align: center;
-}
-@media (min-width: 768px) {
-  .container {
-    width: 80%;
-  }
 }
 
-.card {
-  margin-left: auto;
-  margin-right: auto;
-}
-.card p {
-  letter-spacing: 0.6px;
-  text-align: left;
+ul {
+  list-style: none;
+  padding-left: 0;
 }
 
-.link {
-  color: #51ddfc;
+a {
   text-decoration: none;
-  font-weight: 700;
 }
 
 /* typography */
-.headline--secondary {
-  text-align: left;
+.container {
+  color: #888;
 }
 
 .blockquote {
+  border-left: 10px solid #58e1c1;
+  border-radius: 5px;
   margin: 1.3333333333em 7%;
   padding: 0 0 0 5%;
   font-style: italic;
   font-size: 1.5em;
-  font-weight: 300;
   line-height: 1.2083333333;
-  letter-spacing: 0px;
-  border-left: 0.4166666667em solid #58e1c1;
-  border-radius: 2.5%;
 }
 
 /* grid */
-.grid, .grid__col--12, .grid__col--11, .grid__col--10, .grid__col--9, .grid__col--8, .grid__col--7, .grid__col--6, .grid__col--5, .grid__col--4, .grid__col--3, .grid__col--2, .grid__col--1 {
-  margin-top: 10px;
-  flex-basis: 100%;
+.container {
+  margin: 20px auto;
+  width: 90%;
+  max-width: 1050px;
 }
-@media (min-width: 768px) {
-  .grid, .grid__col--12, .grid__col--11, .grid__col--10, .grid__col--9, .grid__col--8, .grid__col--7, .grid__col--6, .grid__col--5, .grid__col--4, .grid__col--3, .grid__col--2, .grid__col--1 {
-    margin-top: 0;
-  }
-}
+
 .grid__row {
+  padding: 1em 0.625em;
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 768px) {
   .grid__row {
+    display: flex;
     flex-direction: row;
-    max-width: 1050px;
   }
 }
-.grid__col--3.theme__colors {
-  background-color: #deb2ee;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--3.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--3.theme__colors:active {
-  opacity: initial;
-}
-.grid__col--4.theme__colors {
-  background-color: #7ee6fd;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--4.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--4.theme__colors:active {
-  opacity: initial;
-}
-.grid__col--5.theme__colors {
-  background-color: #88d9a0;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--5.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--5.theme__colors:active {
-  opacity: initial;
-}
-.grid__col--6.theme__colors {
-  background-color: #4da2bb;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--6.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--6.theme__colors:active {
-  opacity: initial;
-}
-.grid__col--7.theme__colors {
-  background-color: #ec9fa3;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--7.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--7.theme__colors:active {
-  opacity: initial;
-}
-.grid__col--8.theme__colors {
-  background-color: #fd9f85;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--8.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--8.theme__colors:active {
-  opacity: initial;
-}
-.grid__col--12.theme__colors {
-  background-color: #80e8d1;
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  text-align: left;
-}
-.grid__col--12.theme__colors:hover {
-  opacity: 0.75;
-}
-.grid__col--12.theme__colors:active {
-  opacity: initial;
+.grid__col--1 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
 }
 @media (min-width: 768px) {
   .grid__col--1 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 8.3333333333%;
   }
 }
+.grid__col--2 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--2 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 16.6666666667%;
   }
 }
+.grid__col--3 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--3 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 25%;
   }
 }
+.grid__col--4 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--4 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 33.3333333333%;
   }
 }
+.grid__col--5 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--5 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 41.6666666667%;
   }
 }
+.grid__col--6 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--6 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 50%;
   }
 }
+.grid__col--7 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--7 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 58.3333333333%;
   }
 }
+.grid__col--8 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--8 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 66.6666666667%;
   }
 }
+.grid__col--9 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--9 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 75%;
   }
 }
+.grid__col--10 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--10 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 83.3333333333%;
   }
 }
+.grid__col--11 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--11 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 91.6666666667%;
   }
 }
+.grid__col--12 {
+  display: flex;
+  flex-direction: column;
+  padding: 0.625em;
+  margin-top: 1.25em;
+}
 @media (min-width: 768px) {
   .grid__col--12 {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-basis: 100%;
   }
 }
 
+[class^=grid__col] + [class^=grid__col] {
+  margin-top: 0.5em;
+}
 @media (min-width: 768px) {
   [class^=grid__col] + [class^=grid__col] {
-    margin-left: 10px;
+    margin-top: 0;
+    margin-left: 0.625em;
+  }
+}
+
+.grid__col--3.theme__colors {
+  background-color: #deb2ee;
+  border-radius: 5px;
+}
+
+.grid__col--4.theme__colors {
+  background-color: #7ee6fd;
+  border-radius: 5px;
+}
+
+.grid__col--5.theme__colors {
+  background-color: #88d9a0;
+  border-radius: 5px;
+}
+
+.grid__col--6.theme__colors {
+  background-color: #4da2bb;
+  border-radius: 5px;
+}
+
+.grid__col--7.theme__colors {
+  background-color: #ec9fa3;
+  border-radius: 5px;
+}
+
+.grid__col--8.theme__colors {
+  background-color: #fd9f85;
+  border-radius: 5px;
+}
+
+.grid__col--12.theme__colors {
+  background-color: #80e8d1;
+  border-radius: 5px;
+}
+
+@media (min-width: 768px) {
+  .centered {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 /* navigation */
-.nav {
-  padding-left: 0;
-  list-style-type: none;
-}
 .nav__item a {
   text-decoration: none;
 }
 /* forms */
+.form {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
 .form__label {
-  display: block;
   margin-bottom: 0.625em;
 }
 .form__label--hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
+  display: none;
 }
 .form__input {
   width: 100%;
@@ -678,43 +736,35 @@ template {
 
 /* images */
 .img--frame {
-  width: 100%;
+  padding: 0.625em;
 }
-
 /* buttons */
-.btn--info.theme__colors {
+.btn--info {
   background-color: #927bc1;
 }
-.btn--warning.theme__colors {
+
+.btn--warning {
   background-color: #fd7856;
 }
-.btn--error.theme__colors {
+
+.btn--error {
   background-color: #e4757a;
 }
-.btn--success.theme__colors {
+
+.btn--success {
   background-color: #63cc82;
 }
-.btn--default.theme__colors {
+
+.btn--default {
   background-color: #51ddfc;
 }
 
-[class^=btn--] {
-  padding: 15px 30px;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  font-weight: 700;
-  display: block;
-  width: 100%;
-  margin: 20px 0;
-}
-[class^=btn--]:hover {
-  opacity: 0.75;
-}
-[class^=btn--]:active {
-  opacity: initial;
+@media (min-width: 768px) {
+  [class^=btn--] {
+    flex: 1;
+    margin-right: 0.9375em;
+    margin-left: 0.9375em;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
